syntax = "proto3";

package com.example.ajaxonboardingproject;

import "com/example/ajaxonboardingproject/cinema_hall.proto";

service CinemaHallService {
  rpc add_cinema_hall (CinemaHallRequest) returns (CinemaHallResponse);

  rpc get_all_cinema_halls (CinemaHallRequest) returns (stream CinemaHallResponse);
}
